Closed Bug 575686 Opened 16 years ago Closed 16 years ago

Don't classify URL when HTTP channel fails to open

Categories

(Core :: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b2

People

(Reporter: michal, Assigned: michal)

Details

Attachments

(1 file, 1 obsolete file)

Now we start the channel classifier in nsHttpChannel::AsyncOpen() even in case the channel fails to open.
Attached patch fix (obsolete) — Splinter Review
Attachment #454894 - Flags: review?(jduell.mcbugs)
Comment on attachment 454894 [details] [diff] [review] fix Looks good. Please put "else" on same line as the brace.
Attachment #454894 - Flags: review?(jduell.mcbugs) → review+
Attached patch patch v2Splinter Review
Attachment #454894 - Attachment is obsolete: true
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: