Bug 575686 - Don't classify URL when HTTP channel fails to open. r=jduell